# Hello-Computer

./: .gitignore  Hello-Computer.sln  README.md  index.html
code/dotnet/: .env.example  README.md
code/dotnet/HelloComputer/: HelloComputer.csproj  Program.cs  SpeechConfig.cs  SpeechToText.cs  TextToSpeech.cs
code/dotnet/HelloComputer.Web/: HelloComputer.Web.csproj  Program.cs
code/dotnet/HelloComputer.Web/Pages/: Chat.cshtml  Chat.cshtml.cs  Index.cshtml  SpeechToText.cshtml  SpeechToText.cshtml.cs  TextToSpeech.cshtml  TextToSpeech.cshtml.cs  _ViewImports.cshtml
code/dotnet/HelloComputer.Web/Pages/Shared/: _Layout.cshtml
code/dotnet/HelloComputer.Web/Services/: ChatService.cs  SpeechHelper.cs  SpeechToTextService.cs  TextToSpeechService.cs
code/python/: .env.example  README.md  app.py  cli.py  pyproject.toml
code/python/pages/: 1_Speech_to_Text.py  2_Text_to_Speech.py  3_Chat_with_AI.py
code/python/speech_lib/: __init__.py  config.py  llm.py  stt.py  tts.py
